--- a/WebshopFrontend/Components/Components/ProductPreview.razor
+++ b/WebshopFrontend/Components/Components/ProductPreview.razor
@@ -20,7 +20,7 @@
     </NavLink>
 
     <div>
-        <AddToCartButton Product="Product"></AddToCartButton>
+        <AddToCartButton ProductId="Product.Id" Stock="Product.Stock.Quantity"></AddToCartButton>
     </div>
 
 
