--- a/WebshopFrontend/Components/Pages/Checkout.razor
+++ b/WebshopFrontend/Components/Pages/Checkout.razor
@@ -1,20 +1,16 @@
 ﻿@page "/checkout"
 @using WebshopFrontend.Components.Components
-@using WebshopFrontend.EventHandlers
 @using WebshopFrontend.Services
 @using WebshopFrontend.Services.Interfaces
-@inject OrderState OrderState
 @inject NavigationManager NavigationManager
-@inject IJSRuntime Js
-@inject NotifyCartUpdated NotifyCartUpdated
-@inject ICounterService CounterService
 @inject ICartService CartService
-@implements IDisposable
+@inject IOrderService OrderService
+
 
 <h3>Checkout</h3>
 
 <div class="checkout-table-container">
-    <CheckoutProductTable ProductsChanged="OnProductsChanged" />
+    <CheckoutProductTable />
 </div>
 
 <div>
@@ -22,59 +18,24 @@
 </div>
 
 @code {
-    private OrderDto? _order;
-    private List<IProduct> _products = [];
+    private OrderDto _order;
 
-    private async Task OnFormSubmitted(PersonDto customer)
+    private async Task OnFormSubmitted(UserDto user)
     {
-        CreateOrder(customer);
-        SetOrder();
-        await EmptyCart();
+        await CreateOrder(user);
+        await CartService.ClearCart(user.Id);
+        await OrderService.AddOrder(_order);
         NavigationManager.NavigateTo("/orderconfirmation");
     }
 
-    private async Task EmptyCart()
-    {
-        await Js.InvokeVoidAsync("RemoveAllProductsFromLocalStorage");
-        NotifyCartUpdated.NotifyCartUpdate(this);
-    }
-
-    private void CreateOrder(PersonDto customer)
+    private async Task CreateOrder(UserDto user)
     {
         _order = new OrderDto
-        {
-            Customer = customer,
-            OrderLines = GetOrderLines()
-        };
-    }
-
-    private List<OrderLineDto> GetOrderLines()
-    {
-        return _products.Select(product => new OrderLineDto
             {
-                ArtNr = product.ArtNr,
-                Name = product.Name,
-                Price = GetPrice(product),
-                Quantity = 1
-            }).ToList();
+                Id = 1,
+                User = user,
+                CartItems = await CartService.GetAll(user.Id),
+                OrderDate = DateTime.Now
+            };
     }
-
-    private void SetOrder()
-    {
-        OrderState.SetOrder(_order!);
-        OrderState.OnStateChange += StateHasChanged;
-    }
-
-    private static decimal GetPrice(IProduct product) => product.Price.Discount?.Price ?? product.Price.Regular;
-
-    private void OnProductsChanged(List<IProduct> products)
-    {
-        _products = products;
-    }
-
-    public void Dispose()
-    {
-        OrderState.OnStateChange -= StateHasChanged;
-    }
-
 }
