--- a/WebshopFrontend/Components/Components/ProductPrice.razor
+++ b/WebshopFrontend/Components/Components/ProductPrice.razor
@@ -16,7 +16,7 @@
         <Price Product="Product" FontSizePx="40"></Price>
     </div>
 
-    <AddToCartButton Product="@Product"></AddToCartButton>
+    <AddToCartButton ProductId="Product.Id" Stock="Product.Stock.Quantity"></AddToCartButton>
 </div>
 
 @code {
