--- a/WebshopFrontend/Components/Pages/Products.razor
+++ b/WebshopFrontend/Components/Pages/Products.razor
@@ -22,7 +22,7 @@
 
 @code {
 
-    private List<BoardgameDto>? _boardgames;
+    private List<ProductDto>? _boardgames;
     private List<IProduct> _products = [];
 
     protected override async Task OnInitializedAsync()
