Got it functional

--- a/WebshopFrontend/Components/Components/BoardgameDetails.razor
+++ b/WebshopFrontend/Components/Components/BoardgameDetails.razor
@@ -2,7 +2,7 @@
     <hr/>
     <BoardgameProperties Boardgame="@Boardgame"></BoardgameProperties>
     <hr/>
-    <p class="padding-y">@Boardgame.BoardgameDetails.Description</p>
+    <p class="padding-y">@Boardgame.Description</p>
 </div>
 
 @code {
