--- a/WebshopFrontend/Components/Components/ProductImages.razor
+++ b/WebshopFrontend/Components/Components/ProductImages.razor
@@ -8,7 +8,7 @@
 </div>
 
 @code {
-    [Parameter] public required IProduct Product { get; set; }
+    [Parameter] public required ProductDto Product { get; set; }
 
     public string DisplayStyle = "display: none;";
 
