--- a/WebshopFrontend/Components/Components/ProductPrice.razor
+++ b/WebshopFrontend/Components/Components/ProductPrice.razor
@@ -20,6 +20,6 @@
 </div>
 
 @code {
-    [Parameter] public required IProduct Product { get; set; }
+    [Parameter] public required ProductDto Product { get; set; }
 
 }
