--- a/WebshopFrontend/Components/Components/ProductStock.razor
+++ b/WebshopFrontend/Components/Components/ProductStock.razor
@@ -17,5 +17,5 @@
 </div>
 
 @code {
-    [Parameter] public required IProduct Product { get; set; }
+    [Parameter] public required ProductDto Product { get; set; }
 }
