--- a/WebshopFrontend/Components/Pages/Product.razor
+++ b/WebshopFrontend/Components/Pages/Product.razor
@@ -11,11 +11,11 @@
 else
 {
     <div class="product-grid-container">
-        <ProductHeading Product="_boardgame"></ProductHeading>
-        <ProductImages Product="_boardgame"></ProductImages>
-        <ProductPrice Product="_boardgame"></ProductPrice>
+        <ProductHeading Boardgame="_boardgame"></ProductHeading>
+        <ProductImages Product="_boardgame.Product"></ProductImages>
+        <ProductPrice Product="_boardgame.Product"></ProductPrice>
         <BoardgameDetails Boardgame="_boardgame"></BoardgameDetails>
-        <ProductStock Product="_boardgame"></ProductStock>
+        <ProductStock Product="_boardgame.Product"></ProductStock>
     </div>
 }
 
