--- a/WebshopFrontend/Components/Components/BoardgameProperties.razor
+++ b/WebshopFrontend/Components/Components/BoardgameProperties.razor
@@ -2,15 +2,15 @@
 <div class="game-properties padding-y">
     <div>
         <i class="fa fa-users" aria-hidden="true"></i>
-        <span>@Boardgame.BoardgameDetails.MinPlayers - @Boardgame.BoardgameDetails.MaxPlayers Players</span>
+        <span>@Boardgame.MinPlayers - @Boardgame.MaxPlayers Players</span>
     </div>
     <div>
         <i class="fa fa-clock" aria-hidden="true"></i>
-        <span>@Boardgame.BoardgameDetails.PlayTime min</span>
+        <span>@Boardgame.PlayTime min</span>
     </div>
     <div>
         <i class="fa fa-id-card" aria-hidden="true"></i>
-        <span>From @Boardgame.BoardgameDetails.MinAge years old</span>
+        <span>From @Boardgame.MinAge years old</span>
     </div>
 </div>
 
