Product Service Done

--- a/WebshopFrontend/Components/Components/BoardgameDetails.razor
+++ b/WebshopFrontend/Components/Components/BoardgameDetails.razor
@@ -2,6 +2,7 @@
     <hr/>
     <BoardgameProperties Boardgame="@Boardgame"></BoardgameProperties>
     <hr/>
+    <span class="text-gray">@Boardgame.Publisher.Name</span>
     <p class="padding-y">@Boardgame.Description</p>
 </div>
 
