--- a/WebshopFrontend/Components/Layout/NavMenu.razor
+++ b/WebshopFrontend/Components/Layout/NavMenu.razor
@@ -9,7 +9,7 @@
         </div>
     }
 
-    <NavMenuButton Icon="fa fa-folder-open" Href="products" Text="Boardgames"></NavMenuButton>
+    <NavMenuButton Icon="fa fa-folder-open" Href="products" Text="Products"></NavMenuButton>
     <NavMenuButton Icon="fa fa-credit-card" Href="checkout" Text="Checkout"></NavMenuButton>
     <NavMenuButton Icon="fa fa-user-plus" Href="newuser" Text="New User"></NavMenuButton>
     <NavMenuButton Icon="fa fa-user-circle"  Href="profile" Text="Profile"></NavMenuButton>
