--- a/WebshopFrontend/Components/Layout/NavMenu.razor
+++ b/WebshopFrontend/Components/Layout/NavMenu.razor
@@ -11,8 +11,8 @@
 
     <NavMenuButton Icon="fa fa-folder-open" Href="products" Text="Products"></NavMenuButton>
     <NavMenuButton Icon="fa fa-credit-card" Href="checkout" Text="Checkout"></NavMenuButton>
-    <NavMenuButton Icon="fa fa-user-plus" Href="newuser" Text="New User"></NavMenuButton>
-    <NavMenuButton Icon="fa fa-user-circle"  Href="profile" Text="Profile"></NavMenuButton>
+    <NavMenuButton Icon="fa fa-user-plus" Href="register" Text="New User"></NavMenuButton>
+    <NavMenuButton Icon="fa fa-user-circle"  Href="login" Text="Log In"></NavMenuButton>
     
 </nav>
 
