--- a/WebshopFrontend/Components/Components/CheckoutProductTable.razor
+++ b/WebshopFrontend/Components/Components/CheckoutProductTable.razor
@@ -63,7 +63,7 @@ else
 
     public List<CartItemDto> CartItems { get; set; }
 
-    private int _userId = 1;
+    private string _userId = "1";
     
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
