--- a/WebshopFrontend/Components/Components/OrderConfirmationDetails.razor
+++ b/WebshopFrontend/Components/Components/OrderConfirmationDetails.razor
@@ -36,7 +36,7 @@
 
 <div>
     <h4>Confirmation email sent to:</h4>
-    <p>@Order.User.Email</p>
+    @* <p>@Order.User.Email</p> *@
 </div>
 
 <div>
