--- a/WebshopFrontend/Components/Layout/NavMenu.razor
+++ b/WebshopFrontend/Components/Layout/NavMenu.razor
@@ -13,6 +13,7 @@
     <NavMenuButton Icon="fa fa-credit-card" Href="checkout" Text="Checkout"></NavMenuButton>
     <NavMenuButton Icon="fa fa-user-plus" Href="register" Text="New User"></NavMenuButton>
     <NavMenuButton Icon="fa fa-user-circle"  Href="login" Text="Log In"></NavMenuButton>
+    <NavMenuButton Icon="fa fa-user-md" Href="profile" Text="Profile"></NavMenuButton>
     
 </nav>
 
