--- a/WebshopFrontend/Components/_Imports.razor
+++ b/WebshopFrontend/Components/_Imports.razor
@@ -9,3 +9,7 @@
 @using WebshopFrontend
 @using WebshopFrontend.Components
 @using WebshopShared
+@using Microsoft.AspNetCore.Components.Authorization
+@using WebshopFrontend.Services.Interfaces
+@using WebshopFrontend.Components.Components
+@using System.Security.Claims
