--- a/WebshopFrontend/Components/Components/CheckoutForm.razor
+++ b/WebshopFrontend/Components/Components/CheckoutForm.razor
@@ -2,7 +2,10 @@
 @using System.Text.Json
 @using WebshopFrontend.Services.Interfaces
 @using WebshopShared
+
+
 @inject IUserService UserService
+
 
 
 <EditForm Model="User" OnValidSubmit="Submit" FormName="User">
@@ -146,9 +149,9 @@
 
     private async Task Submit()
     {
-        var currntUserInfo = await UserService.GetUserId();
-        var currentUser = JsonSerializer.Deserialize<UserDto>(currntUserInfo, JsonSerializerOptions.Web);
-        User.Id = currentUser.Id;
-        _success = await UserService.UpdateUserInfo(User);
+        //var currntUserInfo = await UserService.GetUserId();
+        //var currentUser = JsonSerializer.Deserialize<UserDto>(currntUserInfo, JsonSerializerOptions.Web);
+        // User.Id = currentUser.Id;
+        // _success = await UserService.UpdateUserInfo(User);
     }
 }
