--- a/WebshopFrontend/Components/Pages/Products.razor
+++ b/WebshopFrontend/Components/Pages/Products.razor
@@ -1,7 +1,5 @@
 ﻿@page "/products"
-@rendermode InteractiveServer
-@using WebshopFrontend.Components.Components
-@using WebshopFrontend.Services.Interfaces
+@* @rendermode InteractiveServer *@
 @inject IProductService ProductService
 
 
