--- a/WebshopFrontend/Components/Pages/login.razor
+++ b/WebshopFrontend/Components/Pages/login.razor
@@ -1,49 +1,43 @@
 ﻿@page "/login"
 @rendermode InteractiveServer
 @using WebshopFrontend.Services.Interfaces
-@inject IHttpClientFactory HttpClientFactory
 @inject IUserService UserService
 
-@if (_isLoggedIn)
-{
-    <p>Logged in</p>
-}
-else
-{    <p>Log in:</p>
+<AuthorizeView>
+    <Authorized>
+        <div>You're logged in as @context.User.Identity?.Name.</div>
+    </Authorized>
+    <NotAuthorized>
+        <p>Log in:</p>
+        <label for="email">
+            Email:
+            <InputText id="email" @bind-value="@_loginDto.Email"></InputText>
+        </label>
+        <label for="password">
+            Password:
+            <InputText id="password" type="password" @bind-value="@_loginDto.Password"></InputText>
+        </label>
+        <button type="button" @onclick="LogIn">Sign in</button>
 
-    <label for="email">
-        Email:
-        <InputText id="email" @bind-value="@_loginDto.Email"></InputText>
-    </label>
-    <label for="password">
-        Password:
-        <InputText id="password" type="password" @bind-value="@_loginDto.Password"></InputText>
-    </label>
-    <button type="button" @onclick="SignIn">Sign in</button>
-
-    <p>@_message</p>
-}
+        @foreach (var error in _registerLoginResponseDto.ErrorList)
+        {
+            <div>@error</div>
+        }
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
-    private LoginDto _loginDto = new LoginDto();
-    private bool _isLoggedIn = false;
-    private string _message = string.Empty;
+    private LoginDto _loginDto = new();
+    private RegisterLoginResponseDto _registerLoginResponseDto = new();
 
     protected override async Task OnInitializedAsync()
     {
-        _isLoggedIn = await UserService.GetIfLoggedIn();
+        await UserService.CheckAuthenticatedAsync();
     }
 
-    private async Task SignIn()
+    private async Task LogIn()
     {
-        try
-        {
-            _isLoggedIn = await UserService.LogInUser(_loginDto);
-        }
-        catch (Exception e)
-        {
-            _message = e.Message;
-        }
+        _registerLoginResponseDto = await UserService.LoginAsync(_loginDto);
     }
-    
+
 }
